--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to </h1>
-    <h1><span class="name-highlight">New </span>Developer</h1>
-    <h3></h3>
+    <section>
+       <div class="half-width">
+        <h1>Welcome to </h1>
+             <h1><span class="name-highlight">New </span>Developer</h1>
+                <h3>World-class Professional Web Developer</h3>
+             <p>There are no formal educational or license requirements to become a web developer. However, many colleges and trade schools offer coursework in web development. There are also many tutorials and articles which teach web development, often freely available on the web - for example, on JavaScript.</p>
+        <button>Hire me</button>
+    </div>
+            <div class="half-width">
+                    <img src="images/jhankar.png" alt="">
+            </div>
+    </section>
     
 </body>
 </html>
